Tue Mar  6 13:21:24 UTC 2007  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * COPYING: Updated this file to clarify that the ACE license need
          not be shipped with binary-only releases.  Thanks to Michael
          Kircher <michael dot kircher at siemens dot com> and Werner
          Burger <werner dot burger at siemens dot com> for motivating
          this.

Tue Mar  6 12:43:01 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Date_Time_Test.cpp:

          Handle the rare case where the minute rolls over during the test.

Tue Mar  6 04:41:36 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * examples/DLL/README:

          README was referring to files (dsp/dsw) used by Visual Studio C++ 6.
          Updated to refer to files (sln/vcproj) used by VC++ 7.1 or later.

Tue Mar  6 02:37:53 UTC 2007  Carlos O'Ryan  <coryan@atdeesk.com>

        * Merged changes from the fix_bug_2820 branch.  From revision
          77533 to revision 77546.

        Tue Mar  6 02:07:43 UTC 2007  Carlos O'Ryan  <coryan@atdeesk.com>

        * ace/Select_Reactor_Base.cpp:
          Fixed bugs in loop to extract event handlers from notification
          pipe.

        * tests/Bug_2820_Regression_Test.cpp:
          Fixed several problems in the test:
          - The Event_Handler called on the Reactor on its destructor, but
            by then the reactor was already destroyed.
          - Improved debugging messages.
          - Fixed memory management problems, valgrind is happy now.

        Mon Mar  5 18:01:36 UTC 2007  Carlos O'Ryan  <coryan@atdesk.com>

        * ace/Notification_Queue.cpp:
          When deleting the queue we must decrease the reference count on
          all the event handlers stored there.

        * ace/Select_Reactor_Base.cpp:
          When the notification pipe is destroyed we must read the data
          stored there and release all the event handlers.  Otherwise the
          reference counts are broken.
