@@ -55,6 +55,10 @@ int check_type_consistency (const ACE_INET_Addr &addr)
   return 0;
 }
 
+struct Address {
+  const char* name;
+  bool loopback;
+};
 
 int run_main (int argc, ACE_TCHAR *argv[])
 {
@@ -66,9 +70,9 @@ int run_main (int argc, ACE_TCHAR *argv[])
   int status = 0;     // Innocent until proven guilty
 
   const char *ipv4_addresses[] =
-  {
-    "127.0.0.1", "138.38.180.251", "64.219.54.121", "192.0.0.1", "10.0.0.1", 0
-  };
+    {
+      "127.0.0.1", "138.38.180.251", "64.219.54.121", "192.0.0.1", "10.0.0.1", 0
+    };
 
   ACE_INET_Addr addr;
   status |= check_type_consistency (addr);
@@ -219,6 +223,33 @@ int run_main (int argc, ACE_TCHAR *argv[])
     }
 
 #endif
+
+  struct Address loopback_addresses[] =
+    { {"127.0.0.1", true}, {"127.1.2.3", true}
+      , {"127.0.0.0", true}, {"127.255.255.255", true}
+      , {"126.255.255.255", false}, {"128.0.0.0", false}, {0, true}
+    };
+
+  for (int i=0; loopback_addresses[i].name != 0; i++)
+    {
+      struct in_addr addrv4;
+      ACE_UINT32 addr32 = 0;
+
+      ACE_OS::inet_pton (AF_INET, loopback_addresses[i].name, &addrv4);
+
+      ACE_OS::memcpy (&addr32, &addrv4, sizeof (addr32));
+
+      addr.set (80, loopback_addresses[i].name);
+
+      if (addr.is_loopback() != loopback_addresses[i].loopback)
+        {
+          ACE_ERROR ((LM_ERROR,
+                      ACE_TEXT ("ACE_INET_Addr::is_loopback() ")
+                      ACE_TEXT ("failed to distinguish loopback address. %s\n")
+                      , loopback_addresses[i].name));
+          status = 1;
+        }
+    }
 
   ACE_END_TEST;
 
